# circuits-and-code-book

./: .gitignore  Dockerfile  README.md  meta-info.toml
.github/workflows/: build_book.yml  format.yml
scripts/: build_book.py  build_docker_image.py  build_requirements.json  build_svg_images.py  check_code_snippets.py  e-series.py  format.py  python_requirements.txt  setup.py  spell_check.py  spell_check_config.json
src/: 64-bit-timer.tex  adc_init.tex  appendix_more _opamps.tex  appendix_more_passives.tex  appendix_packet_parsing_tests.tex  appendix_switched_divider.tex  bitstream_parity.tex  buck_vs_ldo.tex  compare-i2c-spi.tex  current_sense.tex  interrupts.tex  keyword.tex  led.tex  main.tex  motor_stall.tex  mutex_vs_semaphore.tex  opamp.tex  oscilloscope.tex  packet-parsing.tex  passives.tex  pid.tex  preamble.tex  references.bib  second_edition.tex  signalling.tex  spi-bitbang.tex  stack-growth.tex  switching.tex  teaser-preamble.tex  teaser.tex  title.tex  transmission_lines.tex  unknown_capacitor.tex  voltage_divider.tex  what-is-can.tex
src/bitbang_spi/: bitbang_ex.c  bitbang_spi.c  bitbang_spi_header.h
src/code/bitbang_spi/: CMakeLists.txt  bitbang_ex.h
src/diagram_generator/: ac_dc.py  buck_ccm.py  buck_dcm.py  buck_dcm_simulator.py  chatgpt_buck_dcm.py  hpf_bode_plot.py  i2c.py  i2c_comparison.py  pid_discretization.py  pid_discretization_derivative.py  pid_discretization_integral.py  plot_template.py  priority_inheritance_input.json  priority_inversion.py  priority_inversion_input.json  rtos_task_diagram.py  scope-trigger.py  step_responses.json  (+1 more)
(+36 files in other folders)
